# 2048

./: .gitignore  play.py  play_model.py  pyproject.toml  replay_recording.py  train.py  train_base_config.py
game2048/: __init__.py  utils.py
game2048/agents/: __init__.py  base_agent.py  base_agent_metrics.py  base_agent_metrics_test.py  inference_agent.py  manual_agent.py  priority_agents.py  random_agent.py
game2048/agents/trainable/: __init__.py  dqn_agent.py  memory.py
game2048/engine/: __init__.py  engine.py  engine_performance_tests.py  engine_tests.py
game2048/recording/: __init__.py  game_record.py  replay.py
game2048/visualize/: __init__.py  base_visualizer.py  console_visualizer.py
